# cgmath

./: .bzrignore  CGMath.VS8.vcproj  Makefile  Makefile.am  README  configure.ac  libCGMath.vcproj
include/CGM/: EulerAngle.hpp  Matrix.hpp  Utl.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/MCG/: Def.hpp  Quaternion.hpp
src/: EulerAngle.cpp  Matrix.cpp  Quaternion.cpp  Utl.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
